# Visual-Basic-Core-Compiler

./: .gitignore  ARCHITECTURE.md  PRD.md  README.md  README_CN.md  TASKS.md  pyproject.toml
examples/: arithmetic.vb  array_max_scan.vb  array_sum.vb  collatz_steps.vb  elseif_chain.vb  fib.vb  for_step.vb  function_call.vb  gcd.vb  hello.vb  if_else.vb  leetcode_climbing_stairs.vb  leetcode_palindrome_number.vb  leetcode_two_sum_bruteforce.vb  prime_numbers.vb  select_case_demo.vb  while_loop.vb
scripts/: run_examples.sh
src/visual_basic_core_compiler/: __init__.py  __main__.py  ast_nodes.py  cli.py  ir.py  ir_builder.py  lexer.py  lowering.py  parser.py  pipeline.py  semantic.py  symbol_table.py  tokens.py  toolchain.py
src/visual_basic_core_compiler/codegen/: __init__.py  portable_c.py  typing.py
tests/: _helpers.py  test_cli.py  test_codegen.py  test_e2e.py  test_ir_builder.py  test_lexer.py  test_parser.py  test_semantic.py
