[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-basic-core-compiler"
version = "0.1.0"
description = "A constrained Visual Basic core compiler implemented in Python."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
